# pi-proximity-display

./: .gitignore  Cargo.toml  LICENSE  README.md
pi-proximity-display/: Cargo.toml  pi-proximity-display.service
pi-proximity-display/src/: display.rs  main.rs
vcnl4010/: Cargo.toml
vcnl4010/src/: error.rs  lib.rs
